fix overflow issue

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -84,6 +84,7 @@ h6 {
 .menu {
     background: white;
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     right: 0;
